# uefi-graphics2

./: .gitignore  Cargo.toml  README.md
examples/: cyan_display.rs  hello_world.rs  ping_triangle.rs  yellow_rectangle.rs
src/: error.rs  lib.rs
