[package]
name = "uefi-graphics2"
version = "0.4.3"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
readme = "README.md"
description = "An embedded-graphics display driver for UEFI environments"
repository = "https://github.com/theaddonn/uefi-graphics2"
license = "Apache-2.0"
keywords = ["uefi", "graphics", "no-std", "embedded"]
categories = ["no-std", "embedded", "hardware-support"]

[dependencies]
uefi = { version = "0.33" }
embedded-graphics = "0.8"

[[example]]
name = "cyan_display"
required-features = [ "uefi/global_allocator" ]

[[example]]
name = "hello_world"
required-features = [ "uefi/global_allocator" ]

[[example]]
name = "yellow_rectangle"
required-features = [ "uefi/global_allocator" ]

[[example]]
name = "ping_triangle"
required-features = [ "uefi/global_allocator" ]
